--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							target="_blank">Inmuebles</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="mantenimiento.html">Mantenimiento</a>
+						<a class="nav-link" href="preguntas-frecuentes.html">Preguntas frecuentes</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
@@ -153,10 +153,10 @@
 					</div>
 				</li>
 				<li id="btn-mantenimientos">
-					<a class="d-flex justify-content-center align-items-center" href="mantenimiento.html">
+					<a class="d-flex justify-content-center align-items-center" href="preguntas-frecuentes.html">
 						<div class="text-center">
 							<img class="m-auto" src="img/PNG/mantenimiento.png" alt="mantenimiento">
-							<h3 class="text-center text-naranja mb-0 mt-1">MANTENIMIENTOS</h3>
+							<h3 class="text-center text-naranja mb-0 mt-1">PREGUNTAS FRECUENTES</h3>
 						</div>
 					</a>
 				</li>
@@ -233,24 +233,7 @@
 
 
 
-	
 	<!-- SCRIPTS -->
-
-	<!--Start of Tawk.to Script-->
-	<script type="text/javascript">
-		var Tawk_API = Tawk_API || {},
-			Tawk_LoadStart = new Date();
-		(function () {
-			var s1 = document.createElement("script"),
-				s0 = document.getElementsByTagName("script")[0];
-			s1.async = true;
-			s1.src = 'https://embed.tawk.to/5d36810b6d808312283981e0/default';
-			s1.charset = 'UTF-8';
-			s1.setAttribute('crossorigin', '*');
-			s0.parentNode.insertBefore(s1, s0);
-		})();
-	</script>
-	<!--End of Tawk.to Script-->
 
 	<!-- JQuery -->
 	<script src="js/jquery-3.3.1.min.js"></script>
@@ -264,6 +247,21 @@
 	<!-- Tidio -->
 	<!-- <script src="//code.tidio.co/qgqspxtuk1uhmk0gzvfa6hiktjvmvj1w.js"></script> -->
 
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API = Tawk_API || {},
+			Tawk_LoadStart = new Date();
+		(function () {
+			var s1 = document.createElement("script"),
+				s0 = document.getElementsByTagName("script")[0];
+			s1.async = true;
+			s1.src = 'https://embed.tawk.to/5d37a43f6d8083122839b2e4/default';
+			s1.charset = 'UTF-8';
+			s1.setAttribute('crossorigin', '*');
+			s0.parentNode.insertBefore(s1, s0);
+		})();
+	</script>
+	<!--End of Tawk.to Script-->
 </body>
 
 </html>
