--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<nav class="navbar navbar-expand-xl navbar-light bg-white fixed-top">
 			<div class="navbar-brand mr-0" href="index.html">
 				<a href="index.html"><img src="img/logo/Imagen1.png" alt="Torres y cuadros" class="mb-xs-1"></a>
-				<br><a class="text-dark font-weight-bold" href="tel:+031794364">PBX: 7 943 643 <i class="fas fa-phone"></i></a>
+				<br><a class="text-dark font-weight-bold" Preguntashref="tel:0317943643">PBX: 7 943 643 <i class="fas fa-phone"></i></a>
 			</div>
 			<div class="contacto pl-2 font-weight-bold">
 				<h3 class="text-dark mb-0">Inmobiliaria</h3>
@@ -59,7 +59,7 @@
 							target="_blank">Inmuebles</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="preguntas-frecuentes.html">Preguntas frecuentes</a>
+						<a class="nav-link" href="preguntas-frecuentes.html">Preguntas</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
@@ -156,8 +156,11 @@
 					<a class="d-flex justify-content-center align-items-center" href="preguntas-frecuentes.html">
 						<div class="text-center">
 							<img class="m-auto" src="img/PNG/mantenimiento.png" alt="mantenimiento">
-							<h3 class="text-center text-naranja mb-0 mt-1">PREGUNTAS FRECUENTES</h3>
+							<h3 class="text-center text-naranja mb-0 mt-1">PREGUNTAS</h3>
 						</div>
+						<div class="btn-emergente btn-emergente0 btn-emergente-pr" target="_blank">
+								<h3 class="text-center text-white mb-0 mt-1 h5">PREGUNTAS FRECUENTES</h3>
+							</div>
 					</a>
 				</li>
 				<li id="btn-pse">
