update telefono en el nav

--- a/empleados.html
+++ b/empleados.html
@@ -27,7 +27,7 @@
 			<nav class="navbar navbar-expand-xl navbar-light bg-white fixed-top">
 				<div class="navbar-brand mr-0" href="index.html">
 					<a href="index.html"><img src="img/logo/Imagen1.png" alt="Torres y cuadros" class="mb-xs-1"></a>
-					<br><a class="text-dark font-weight-bold" Preguntashref="tel:0317943643">PBX: 7 943 643 <i
+					<br><a class="text-dark font-weight-bold" href="tel:0317943643">PBX: 7 943 643 <i
 							class="fas fa-phone"></i></a>
 				</div>
 				<div class="contacto pl-2 font-weight-bold">
@@ -148,7 +148,7 @@
 	<script src="js/mdb.min.js"></script>
 
 	<!--Start of Tawk.to Script-->
-	<script type="text/javascript">
+	<!-- <script type="text/javascript">
 		var Tawk_API = Tawk_API || {},
 			Tawk_LoadStart = new Date();
 		(function () {
@@ -160,7 +160,7 @@
 			s1.setAttribute('crossorigin', '*');
 			s0.parentNode.insertBefore(s1, s0);
 		})();
-	</script>
+	</script> -->
 	<!--End of Tawk.to Script-->
 </body>
 
