--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -38,7 +38,7 @@
 			<nav class="navbar navbar-expand-xl navbar-light bg-white fixed-top">
 				<div class="navbar-brand mr-0" href="index.html">
 					<a href="index.html"><img src="img/logo/Imagen1.png" alt="Torres y cuadros" class="mb-xs-1"></a>
-					<br><a class="text-dark font-weight-bold" Preguntashref="tel:0317943643">PBX: 7 943 643 <i class="fas fa-phone"></i></a>
+					<br><a class="text-dark font-weight-bold" href="tel:0317943643">PBX: 7 943 643 <i class="fas fa-phone"></i></a>
 				</div>
 				<div class="contacto pl-2 font-weight-bold">
 					<h3 class="text-dark mb-0">Inmobiliaria</h3>
