--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -254,8 +254,10 @@
 											ARRENDATARIOS
 											ingresa con el número de cédula del arrendatario y
 											clave 0000.(al ingresar por primera vez se le pedirá que asigne una nueva clave de mínimo seis
-											caracteres
-											utilizando letras y números)
+											caracteres utilizando letras y números)
+
+											<video src="video/Codigo de barrasCodigo de barras_1.mp4" controls class="w-100"
+											style="margin-top: 1em;box-shadow: 4px 4px 8px black;"></video>
 										</div>
 									</div>
 
@@ -270,7 +272,7 @@
 										<a class="collapsed" data-toggle="collapse" data-parent="#accordionEx-1" href="#collapseTwo2-2"
 											aria-expanded="false" aria-controls="collapseTwo2-2">
 											<h5 class="mb-0 text-naranja">
-												Como pago mi factura
+												Como pago mi factura con PSE
 												<i class="fas fa-angle-up rotate-icon float-right"></i>
 											</h5>
 										</a>
@@ -666,7 +668,32 @@
 						data-parent="#accordionEx23">
 						<div class="card-body">
 							<!--Accordion wrapper-->
-							<div class="accordion md-accordion" id="accordionEx-3" role="tablist" aria-multiselectable="true">
+							<div class="accordion md-accordion" id="accordionEx-propietario" role="tablist" aria-multiselectable="true">
+
+								<!-- Accordion card -->
+								<div class="card">
+
+									<!-- Card header -->
+									<div class="card-header" role="tab" id="headingOne3">
+										<a data-toggle="collapse" data-parent="#accordionEx-propietario" href="#collapseOne3-1" aria-expanded="true"
+											aria-controls="collapseOne3-1">
+											<h5 class="mb-0 text-naranja">
+												Como consultar mi estracto de propietario
+												<i class="fas fa-angle-up rotate-icon float-right"></i>
+											</h5>
+										</a>
+									</div>
+
+									<!-- Card body -->
+									<div id="collapseOne3-1" class="collapse" role="tabpanel" aria-labelledby="headingOne3"
+										data-parent="#accordionEx-3">
+										<div class="card-body">
+											<video src="video/Propietarios.mp4" controls class="w-100"
+											style="margin-top: 1em;box-shadow: 4px 4px 8px black;"></video>
+										</div>
+									</div>
+
+								</div>
 
 								<!-- Accordion card -->
 								<div class="card">
