--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -678,7 +678,7 @@
 										<a data-toggle="collapse" data-parent="#accordionEx-propietario" href="#collapseOne3-1" aria-expanded="true"
 											aria-controls="collapseOne3-1">
 											<h5 class="mb-0 text-naranja">
-												Como consultar mi estracto de propietario
+												Como consultar mi extracto de propietario
 												<i class="fas fa-angle-up rotate-icon float-right"></i>
 											</h5>
 										</a>
