--- a/propietario.html
+++ b/propietario.html
@@ -673,7 +673,7 @@
 							</a>
 						</h5>
 					</div>
-					<div id="collapse98" class="collapse" role="tabpanel" aria-labelledby="heading98"
+					<div id="collapse98" class="collapse show" role="tabpanel" aria-labelledby="heading98"
 						data-parent="#accordionEx23">
 						<div class="card-body">
 							<!--Accordion wrapper-->
@@ -695,7 +695,7 @@
 									</div>
 
 									<!-- Card body -->
-									<div id="collapseOne3-1" class="collapse" role="tabpanel" aria-labelledby="headingOne3"
+									<div id="collapseOne3-1" class="collapse show" role="tabpanel" aria-labelledby="headingOne3"
 										data-parent="#accordionEx-3">
 										<div class="card-body">
 											<!-- <video src="video/Propietarios.mp4" controls class="w-100"
@@ -1002,7 +1002,41 @@
 
 	</main>
 
+<!-- Button trigger modal-->
+<button id="btnmodalYT" type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalYT" style="display: none;">Launch modal</button>
+<!--Modal: modalYT-->
+<div class="modal fade" id="modalYT" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
 
+    <!--Content-->
+    <div class="modal-content">
+
+      <!--Body-->
+      <div class="modal-body mb-0 p-0">
+
+        <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/q2muhMCGrRY"
+            allowfullscreen></iframe>
+        </div>
+
+      </div>
+
+      <!--Footer-->
+      <div class="modal-footer justify-content-center flex-column flex-md-row">
+        <span class="mr-4">Como consultar mi extracto de propietario</span>
+        <button type="button" class="btn btn-outline-warning btn-rounded btn-md ml-4"
+          data-dismiss="modal">Close</button>
+
+
+      </div>
+
+    </div>
+    <!--/.Content-->
+
+  </div>
+</div>
+<!--Modal: modalYT-->
 
 	<!-- Mensaje de en construccion -->
 	<div class="modal fade" id="en-construccion" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
@@ -1061,6 +1095,10 @@
 			s1.setAttribute('crossorigin', '*');
 			s0.parentNode.insertBefore(s1, s0);
 		})();
+
+		document.addEventListener('DOMContentLoaded', () => {
+			document.getElementById('btnmodalYT').click()
+		})
 	</script>
 	<!--End of Tawk.to Script-->
 </body>
