ajustes de video

--- a/empleados.html
+++ b/empleados.html
@@ -58,7 +58,7 @@
 								target="_blank">Inmuebles</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="preguntas-frecuentes.html">Preguntas</a>
+							<a class="nav-link" href="preguntas-frecuentes.html">FAQ</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
