--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							target="_blank">Inmuebles</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="preguntas-frecuentes.html">Preguntas</a>
+						<a class="nav-link" href="preguntas-frecuentes.html">FAQ</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
@@ -155,8 +155,8 @@
 				<li id="btn-mantenimientos">
 					<a class="d-flex justify-content-center align-items-center" href="preguntas-frecuentes.html">
 						<div class="text-center">
-							<img class="m-auto" src="img/PNG/mantenimiento.png" alt="mantenimiento">
-							<h3 class="text-center text-naranja mb-0 mt-1">PREGUNTAS</h3>
+							<img class="m-auto" src="img/PNG/FAQ.png" alt="mantenimiento">
+							<h3 class="text-center text-naranja mb-0 mt-1">FAQ</h3>
 						</div>
 						<div class="btn-emergente btn-emergente0 btn-emergente-pr" target="_blank">
 								<h3 class="text-center text-white mb-0 mt-1 h5">PREGUNTAS FRECUENTES</h3>
