--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -64,12 +64,12 @@
 						<li class="nav-item">
 							<a class="nav-link" href="arrendatario.html">Arrendatario</a>
 						</li>
-						<li class="nav-item">
+						<a class="nav-item">
 							<a class="nav-link" href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
 								target="_blank">Inmuebles</a>
 						</li>
 						<li class="nav-item active">
-							<a class="nav-link" href="preguntas-frecuentes.html">Preguntas</a>
+							<a class="nav-link" href="preguntas-frecuentes.html">FAQ</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
@@ -94,7 +94,7 @@
 					<li class="mt-1"><a class="text-white" href="index.html"> Inicio </a></li>
 					<p class="m-1"> / </p>
 					<li class="mt-1">
-						<p> Preguntas </p>
+						<p> FAQ </p>
 					</li>
 				</ul>
 			</div>
@@ -256,14 +256,17 @@
 											ingresa con el número de cédula del arrendatario y
 											clave 0000.(al ingresar por primera vez se le pedirá que asigne una nueva clave de mínimo seis
 											caracteres utilizando letras y números)
+											<button type="button" class="btn w-50 p-0 d-block mx-auto waves-effect waves-light" data-toggle="modal" data-target="#codigoDeBarras">
+												<img src="img/video/tutorial.png" alt="Video tutorial" class="img-fluid">
+											</button>
 
 											<!-- <video src="video/Codigo de barrasCodigo de barras_1.mp4" controls class="w-100"
 												style="margin-top: 1em;box-shadow: 4px 4px 8px black;"></video> -->
-											<div class="iframe-container">
+											<!-- <div class="iframe-container">
 												<iframe src="https://www.youtube.com/embed/2ILHsBrfiM4" class="pt-0" frameborder="0"
 													allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 													allowfullscreen></iframe>
-											</div>
+											</div> -->
 										</div>
 									</div>
 
@@ -294,11 +297,14 @@
 											opcion de ARRENDATARIOS ingresa con el número de cédula del arrendatario , descarga la factura y
 											la imprime en una impresoa Laser y presenta su factura en el banco de BOGOTA o banco AV-VILLAS.
 
-											<div class="iframe-container">
+											<button type="button" class="btn w-50 p-0 d-block mx-auto waves-effect waves-light" data-toggle="modal" data-target="#pagoPSE">
+												<img src="img/video/tutorial.png" alt="Video tutorial" class="img-fluid">
+											</button>
+											<!-- <div class="iframe-container">
 												<iframe src="https://www.youtube.com/embed/ttN3OMShqX0" class="pt-0" frameborder="0"
 													allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 													allowfullscreen></iframe>
-											</div>
+											</div> -->
 										</div>
 									</div>
 
@@ -700,11 +706,14 @@
 										<div class="card-body">
 											<!-- <video src="video/Propietarios.mp4" controls class="w-100"
 												style="margin-top: 1em;box-shadow: 4px 4px 8px black;"></video> -->
-											<div class="iframe-container">
+												<button type="button" class="btn w-50 p-0 d-block mx-auto waves-effect waves-light" data-toggle="modal" data-target="#propietario">
+													<img src="img/video/tutorial.png" alt="Video tutorial" class="img-fluid">
+												</button>
+											<!-- <div class="iframe-container">
 												<iframe src="https://www.youtube.com/embed/q2muhMCGrRY" frameborder="0" class="pt-0"
 													allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 													allowfullscreen></iframe>
-											</div>
+											</div> -->
 										</div>
 									</div>
 
@@ -996,9 +1005,107 @@
 
 		</section>
 
+<!--Modal: pagoPSE-->
+<div class="modal fade" id="pagoPSE" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+
+    <!--Content-->
+    <div class="modal-content">
+
+      <!--Body-->
+      <div class="modal-body mb-0 p-0">
+
+        <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+          <iframe class="embed-responsive-item pt-0" src="https://www.youtube.com/embed/ttN3OMShqX0"
+            allowfullscreen></iframe>
+        </div>
+
+      </div>
+
+      <!--Footer-->
+      <div class="modal-footer justify-content-center flex-column flex-md-row">
+        <span class="mr-4">Como hacer su pago por PSE</span>
+        <button type="button" class="btn btn-outline-warning btn-rounded btn-md ml-4"
+          data-dismiss="modal">Close</button>
 
 
+      </div>
 
+    </div>
+    <!--/.Content-->
+
+  </div>
+</div>
+<!--Modal: pagoPSE-->
+
+<!--Modal: codigoDeBarras-->
+<div class="modal fade" id="codigoDeBarras" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+
+    <!--Content-->
+    <div class="modal-content">
+
+      <!--Body-->
+      <div class="modal-body mb-0 p-0">
+
+        <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+          <iframe class="embed-responsive-item pt-0" src="https://www.youtube.com/embed/2ILHsBrfiM4"
+            allowfullscreen></iframe>
+        </div>
+
+      </div>
+
+      <!--Footer-->
+      <div class="modal-footer justify-content-center flex-column flex-md-row">
+        <span class="mr-4">Como Descargar su código de barras</span>
+        <button type="button" class="btn btn-outline-warning btn-rounded btn-md ml-4"
+          data-dismiss="modal">Close</button>
+
+
+      </div>
+
+    </div>
+    <!--/.Content-->
+
+  </div>
+</div>
+<!--Modal: codigoDeBarras-->
+
+<!--Modal: propietario-->
+<div class="modal fade" id="propietario" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+
+    <!--Content-->
+    <div class="modal-content">
+
+      <!--Body-->
+      <div class="modal-body mb-0 p-0">
+
+        <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+          <iframe class="embed-responsive-item pt-0" src="https://www.youtube.com/embed/q2muhMCGrRY"
+            allowfullscreen></iframe>
+        </div>
+
+      </div>
+
+      <!--Footer-->
+      <div class="modal-footer justify-content-center flex-column flex-md-row">
+        <span class="mr-4">Como consultar mi extracto de propietario</span>
+        <button type="button" class="btn btn-outline-warning btn-rounded btn-md ml-4"
+          data-dismiss="modal">Close</button>
+
+
+      </div>
+
+    </div>
+    <!--/.Content-->
+
+  </div>
+</div>
+<!--Modal: propietario-->
 
 	</main>
 
