--- a/codigoDeBarras.html
+++ b/codigoDeBarras.html
@@ -1011,6 +1011,13 @@
 
 	</main>
 
+
+		<!-- btn whatsapp -->
+		<a href="https://api.whatsapp.com/send?phone=+573157025141&text=Hola!%20me%20gustaria%20informacion"
+		class="btn-whatsapp" target="_blank">
+			<img src="https://seeklogo.com/images/W/whatsapp-icon-logo-6E793ACECD-seeklogo.com.png" alt="whatsapp">
+		</a>
+		
 <!--Modal: pagoPSE-->
 <div class="modal fade" id="pagoPSE" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
