--- a/pagoPSE.html
+++ b/pagoPSE.html
@@ -1011,6 +1011,13 @@
 
 	</main>
 
+
+		<!-- btn whatsapp -->
+		<a href="https://api.whatsapp.com/send?phone=+573157025141&text=Hola!%20me%20gustaria%20informacion"
+		class="btn-whatsapp" target="_blank">
+			<img src="https://seeklogo.com/images/W/whatsapp-icon-logo-6E793ACECD-seeklogo.com.png" alt="whatsapp">
+		</a>
+		
 <!-- Button trigger modal-->
 <button id="btnpagoPSE" type="button" class="btn btn-primary" data-toggle="modal" data-target="#pagoPSE" style="display: none;">Launch modal</button>
 <!--Modal: pagoPSE-->
