--- a/propietarios.html
+++ b/propietarios.html
@@ -97,7 +97,11 @@
 			frameborder="0"></iframe>
 	</main>
 
-
+	<!-- btn whatsapp -->
+	<a href="https://api.whatsapp.com/send?phone=+573157025141&text=Hola!%20me%20gustaria%20informacion"
+	class="btn-whatsapp" target="_blank">
+		<img src="https://seeklogo.com/images/W/whatsapp-icon-logo-6E793ACECD-seeklogo.com.png" alt="whatsapp">
+	</a>
 
 	<!-- Mensaje de en construccion -->
 	<div class="modal fade" id="en-construccion" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
